force-app/main/default/src/objects/DruvainSyncProd__Insync_Timezone__c/DruvainSyncProd__Insync_Timezone__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This custom setting is used if admin wants to show time value in their timezone</description>
    <label>Insync Timezone</label>
</CustomObject>