force-app/main/default/src/objects/DruvainSyncProd__Insync_Timezone__c/fields/DruvainSyncProd__backuphistory__c.field-meta.xml
<CustomField>
    <fullName>DruvainSyncProd__backuphistory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>backuphistory</label>
    <type>Checkbox</type>
</CustomField>