force-app/main/default/src/objects/DruvainSyncProd__Insync_Timezone__c/fields/DruvainSyncProd__Is_Convert__c.field-meta.xml
<CustomField>
    <fullName>DruvainSyncProd__Is_Convert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Convert</label>
    <type>Checkbox</type>
</CustomField>