force-app/main/default/src/objects/DruvainSyncProd__Insync_Timezone__c/fields/DruvainSyncProd__TimeZoneValue__c.field-meta.xml
<CustomField>
    <fullName>DruvainSyncProd__TimeZoneValue__c</fullName>
    <description>TimeZone Value</description>
    <encryptionScheme>None</encryptionScheme>
    <label>TimeZoneValue</label>
    <length>40</length>
    <type>Text</type>
</CustomField>